--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_username: wayneoween
 # Theme Settings
 remote_theme: sylhare/Type-on-Strap
 color_theme: auto
-header_text: Adventures in cold waters
+header_text: Abenteuer in kalten Gewässern
 header_feature_image: assets/images/header.jpg
 header_feature_image_responsive: false
 
