--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 repos:
   # General hooks for all files
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -10,7 +10,7 @@ repos:
 
   # JavaScript/TypeScript formatting with Prettier
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
+    rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
         files: \.(js|jsx|ts|tsx|json|css|scss|sass|yml|yaml)$
@@ -19,7 +19,7 @@ repos:
 
   # Ruby formatting with RuboCop
   - repo: https://github.com/rubocop/rubocop
-    rev: v1.59.0
+    rev: v1.77.0
     hooks:
       - id: rubocop
         args: [--autocorrect]
