--- a/mise.toml
+++ b/mise.toml
@@ -1,4 +1,5 @@
 [tools]
-node = "latest"
-pre-commit = "latest"
-ruby = "latest"
+direnv = "2.37.0"
+node = "24.3.0"
+pre-commit = "4.2.0"
+ruby = "3.4.4"
