--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -198,7 +198,7 @@ glossary:
   - term: Finnan
     definition: Halblings-Kleriker des Palter und Hauptpriester auf Fallegur. Mit Indigo-Tätowierungen bedeckt.
     more: Ein temperamentvoller Priester.
-    type: Kleriker
+    type: Person
     image: ''
     image_alt: Finnan, Kleriker des Palter
     url: ''
