--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -226,7 +226,7 @@ glossary:
   - term: Baendur
     definition: Königreiche der Sesshaften. Der Name bedeutet "Sinkt Schnell" im Krieger-Dialekt.
     more: Dutzende kleinere Königreiche, verstreut über die Welt. Lose durch Philosophie verbunden, aber nicht vereint. Nachfahren eines alten Reiches, das von Drachen bedroht wurde. Ihre Vorfahren flohen wie die Krieger nach Grimnir, etablierten aber Königreiche statt Klans. Ihre Waffen sind oft hochwertiger als die der Krieger, weshalb sie beliebte Raubziele sind.  König Cenric Edgare im Norden gilt als mächtigster ihrer Herrscher.
-    type: Völker
+    type: Volk
     image: ''
     image_alt: Die Baendur-Königreiche
     url: ''
