--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -308,7 +308,7 @@ glossary:
     image_alt: Der mysteriöse Eisenwald mit seinen lebendigen Bäumen
     url: ''
   - term: Varang
-    definition: Zersplitterte kleinerer Klans und Langschiff-Crews ohne Anführer. Leben außerhalb der großen Klan-Hierarchie.
+    definition: Zersplitterte, kleinere Klans und Langschiff-Crews ohne Anführer. Leben außerhalb der großen Klan-Hierarchie.
     more: Sammelbegriff für alle Krieger, die nicht zu den etablierten Großklans gehören. Dazu zählen Verbannte, Neuankömmlinge vom Regenbogenspeer und Außenseiter aller Rassen. Ihre Siedlungen sind meist versteckt, um Angriffe mächtiger Klans zu vermeiden. Nirgendwo ist ihre größte bekannte gemeinsame Siedlung.
     type: Gruppe
     image: ''
