--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -126,7 +126,7 @@ glossary:
     image_alt: Die schwimmende Stadt Drifthall
     url: ''
   - term: Nirgendwo
-    definition: Grenzstadt für Verbannte und Neuankömmlinge.
+    definition: Grenzstadt der Varang für Verbannte und Neuankömmlinge.
     more: Kreuzung verschiedener Kulturen am Rande der Zivilisation. Neuankömmlinge bleiben in Zelten ausserhalb der Stadt. Vom Regenbogenspeer hierher Gebrachte vermischen sich mit Verbannten und geflohenen Kriegern. Krieger-Kultur dominiert trotz Vielfalt.
     type: Ort
     image: ''
