fix a broken image

--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -192,7 +192,7 @@ glossary:
     definition: König des Steinkönigreichs und mächtiger Baendur-Herrscher.
     more: Ein ehrgeiziger Mann, dessen Blutlinie angeblich vom Witchking abstammt. Er führte mehrere gescheiterte Kriege gegen die Krieger und wurde in die vulkanischen Westlande zurückgedrängt. Cenric hat zahlreiche Kinder, die in andere Baendur-Königreiche eingeheiratet haben.
     type: Person
-    image: '/assets/images/cenric_edgare.png'
+    image: ''
     image_alt: König Cenric Edgare der Baendur
     url: ''
   - term: Finnan
