--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -154,8 +154,8 @@ glossary:
     image_alt: Zeichen des Alljarls
     url: ''
   - term: Regenbogenspeer
-    definition: Mächtiges Artefakt aus den Legenden, bringt Personen nach Grimnir.
-    more: Legendäres Artefakt, das in der Steinhof-Insel verankert sein soll. Bringt Personen aus anderen Welten nach Grimnir und soll große magische Kräfte besitzen.
+    definition: Legendäre Waffe der Vanir, von Mirgal erschaffen. Kann Portale zwischen Welten öffnen. Wurde zerbrochen und seine Teile versteckt.
+    more: Vor Jahrhunderten zerbrochen und unter den Klans versteckt, da die Völv prophezeiten - wird er je wieder ganz, bedeutet das Grimnirs gewaltsames Ende. Kann Portale zwischen Welten öffnen und brachte ursprünglich viele Siedler nach Grimnir.
     type: Gegenstand
     image: '/assets/images/rainbow_spear.png'
     image_alt: Der mystische Regenbogenspeer
