--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -155,7 +155,7 @@ glossary:
     url: ''
   - term: Regenbogenspeer
     definition: Legendäre Waffe der Vanir, von Mirgal erschaffen. Kann Portale zwischen Welten öffnen. Wurde zerbrochen und seine Teile versteckt.
-    more: Vor Jahrhunderten zerbrochen und unter den Klans versteckt, da die Völv prophezeiten - wird er je wieder ganz, bedeutet das Grimnirs gewaltsames Ende. Kann Portale zwischen Welten öffnen und brachte ursprünglich viele Siedler nach Grimnir.
+    more: Vor Jahrhunderten zerbrochen und unter den Klans versteckt, da die Völv prophezeiten - wird er je wieder ganz, bedeutet das Grimnirs gewaltsames Ende. Ein Rest befindet sich am Steinhof. Kann heute noch Portale zwischen Welten öffnen und brachte ursprünglich viele Siedler nach Grimnir.
     type: Gegenstand
     image: '/assets/images/rainbow_spear.png'
     image_alt: Der mystische Regenbogenspeer
