--- a/_data/allowed_types.yml
+++ b/_data/allowed_types.yml
@@ -1,11 +1,12 @@
-- Vanir
-- Legende
-- Person
-- Klan
-- Ort
 - Ereignis
-- Rang
 - Gegenstand
 - Gruppe
-- Volk
+- Klan
+- Legende
+- Ort
+- Person
+- Rang
 - Schiff
+- Spielercharakter
+- Vanir
+- Volk
