add finnan image

--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -199,7 +199,7 @@ glossary:
     definition: Halblings-Kleriker des Palter und Hauptpriester auf Fallegur. Mit Indigo-Tätowierungen bedeckt.
     more: Ein temperamentvoller Priester.
     type: Person
-    image: ''
+    image: '/assets/images/finnan.png'
     image_alt: Finnan, Kleriker des Palter
     url: ''
   - term: Lahahel Korloke
