add danik glossary

--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -454,3 +454,10 @@ glossary:
     image: '/assets/images/toki.png'
     image_alt: Toki, Aktivistin von Nirgendwo
     url: ''
+  - term: Danik
+    definition: Sohn von Cenric Edgare. Heiratete Königin Hilde von Winanric. Galt als tot nach dem Überfall auf das Königreich.
+    more: Bekannt unter dem Beinamen 'Hetel'. War mit Königin Hilde verheiratet und Vater mehrerer Kinder, darunter Kudrun. Ritt mit Hilde aus, um Angreifer, denen Kudruns Hand verwehrt wurde, abzuwehren - beide galten als gefallen. Der Varang Asvard behauptete jedoch, dass Cenric ihn im Beisein von Danik beauftragt hatte, die Familie seines Sohnes zu rächen.
+    type: Person
+    image: ''
+    image_alt: Danik 'Hetel' Edgare
+    url: ''
